--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
                 </div>
                 <!-- Gemini Culinary Explorer -->
                 <div class="bg-white p-6 rounded-lg shadow-md mb-8 border-l-4 border-pink-500">
-                    <h3 class="text-xl font-bold text-pink-700 mb-3">✨ AI 실시간 맛집 검색</h3>
-                    <p class="text-sm text-stone-600 mb-4">찾고 싶은 음식 종류나 식당 이름을 입력해 보세요. AI가 현지에서 실제 운영 중인 맛집을 찾아 추천해 드립니다.</p>
+                    <h3 class="text-xl font-bold text-pink-700 mb-3">✨ AI 맞춤 장소 검색</h3>
+                    <p class="text-sm text-stone-600 mb-4">찾고 싶은 맛집이나 숙소의 특징을 입력해 보세요. AI가 현지에서 실제 운영 중인 장소를 찾아 추천해 드립니다.</p>
                     <div class="flex flex-col sm:flex-row gap-2">
-                        <input type="text" id="food-preference-input" placeholder="예: 리스본 해물밥 맛집, 빌바오 한식당" class="flex-grow p-2 border border-stone-300 rounded-md focus:ring-2 focus:ring-pink-400 focus:border-transparent">
-                        <button id="get-food-recommendation-btn" class="gemini-btn text-white font-bold py-2 px-4 rounded-md flex items-center justify-center">
-                            <span>맛집 검색하기</span>
+                        <input type="text" id="place-preference-input" placeholder="예: 리스본 해물밥 맛집, 포르투 강변 호텔" class="flex-grow p-2 border border-stone-300 rounded-md focus:ring-2 focus:ring-pink-400 focus:border-transparent">
+                        <button id="get-place-recommendation-btn" class="gemini-btn text-white font-bold py-2 px-4 rounded-md flex items-center justify-center">
+                            <span>검색하기</span>
                             <div class="loader ml-2"></div>
                         </button>
                     </div>
-                    <div id="food-recommendation-output" class="mt-4 p-4 bg-pink-50 rounded-lg prose prose-sm max-w-none hidden"></div>
+                    <div id="place-recommendation-output" class="mt-4 p-4 bg-pink-50 rounded-lg prose prose-sm max-w-none hidden"></div>
                 </div>
 
                 <div class="flex justify-center flex-wrap gap-2 mb-8">
@@ -438,20 +438,20 @@
                 });
             }
             
-            function initFoodRecommendation() {
-                const button = document.getElementById('get-food-recommendation-btn');
-                const input = document.getElementById('food-preference-input');
-                const outputDiv = document.getElementById('food-recommendation-output');
+            function initPlaceSearch() {
+                const button = document.getElementById('get-place-recommendation-btn');
+                const input = document.getElementById('place-preference-input');
+                const outputDiv = document.getElementById('place-recommendation-output');
                 const loader = button.querySelector('.loader');
                 
                 async function handleSearch() {
                     const preference = input.value.trim();
                     if (!preference) {
-                        outputDiv.innerHTML = "먼저 원하는 음식이나 식당을 입력해주세요.";
+                        outputDiv.innerHTML = "먼저 찾고 싶은 장소(맛집 또는 숙소)를 입력해주세요.";
                         outputDiv.style.display = 'block'; return;
                     }
                     loader.style.display = 'inline-block'; button.disabled = true;
-                    const prompt = `You are a helpful local guide for a 59-year-old Korean traveler in Portugal or Northern Spain. The traveler wants to find a restaurant. Based on their search query, recommend a minimum of 4 and a maximum of 6 specific, real restaurants. For each recommendation, provide the restaurant's name, its approximate rating (e.g., 4.5/5), a brief appealing description, and a valid Google Maps search link for that restaurant. The traveler's search query is: '${preference}'. Respond in Korean. Crucially, your entire response must be plain text without any Markdown formatting (do not use *, #, **, etc.).`;
+                    const prompt = `You are an expert local guide for a 59-year-old Korean traveler in Portugal or Northern Spain. The traveler is looking for a place to eat or stay. First, determine if the query is about food/restaurants or accommodation/hotels. Based on that, recommend a minimum of 4 to a maximum of 6 specific, real places. For each recommendation, provide the place's name, its approximate rating (e.g., 4.5/5), a brief appealing description, and a valid Google Maps search link for that place. The traveler's search query is: '${preference}'. Respond in Korean. Crucially, your entire response must be plain text without any Markdown formatting (do not use *, #, **, etc.).`;
                     const result = await getGeminiResponse(prompt);
                     outputDiv.innerHTML = formatAIResponse(result);
                     outputDiv.style.display = 'block';
@@ -544,7 +544,7 @@
             createTipsAccordion();
             createRecommendations();
             initFilters();
-            initFoodRecommendation();
+            initPlaceSearch();
         });
     </script>
 </body>
