--- a/index.html
+++ b/index.html
@@ -156,24 +156,24 @@
                 }
             ],
             recommendations: [
-                { id: 1, city: 'lisbon', type: 'food', name: 'Cervejaria Ramiro', desc: '해산물 본연의 맛을 즐길 수 있는 리스본 최고의 맛집. 예약 필수.', note: '특급 맛집', price: '€€€' },
-                { id: 2, city: 'lisbon', type: 'food', name: 'Solar dos Presuntos', desc: '현지인도 사랑하는 고급 해산물 레스토랑. 문어 요리 추천.', note: '고급/해산물', price: '€€€€' },
-                { id: 3, city: 'lisbon', type: 'food', name: 'Time Out Market Lisboa', desc: '유명 맛집들을 한곳에 모아놓은 푸드코트. 다양한 선택지.', note: '푸드코트/다양성', price: '€€' },
-                { id: 4, city: 'lisbon', type: 'food', name: 'A Ginjinha', desc: '체리주 진자(Ginja)를 작은 잔에 마시는 역사적인 가게.', note: '전통주 체험', price: '€' },
-                { id: 5, city: 'lisbon', type: 'food', name: 'Pastéis de Belém', desc: '설명이 필요 없는 원조 에그타르트. 벨렝 지구 방문 시 필수.', note: '디저트/필수', price: '€' },
-                { id: 6, city: 'lisbon', type: 'stay', name: 'Hotel da Baixa', desc: '바이샤 중심 최적의 위치. 현대적 시설과 훌륭한 조식.', note: '4성급/위치 최상', price: '€€€' },
-                { id: 7, city: 'lisbon', type: 'stay', name: 'Pousada de Lisboa', desc: '코메르시우 광장의 5성급 럭셔리 호텔. 특별한 경험.', note: '5성급/럭셔리', price: '€€€€€' },
-                { id: 8, city: 'aveiro', type: 'food', name: 'Maré Cheia', desc: '신선한 해산물 스튜(Caldeirada)가 일품인 현지 인기 식당.', note: '현지인 맛집', price: '€€' },
-                { id: 9, city: 'aveiro', type: 'stay', name: 'Hotel Moliceiro', desc: '중앙 운하 바로 앞에 위치한 로맨틱한 4성급 호텔. 주차 가능.', note: '4성급/전망', price: '€€€' },
-                { id: 10, city: 'porto', type: 'food', name: 'Tapabento', desc: '상 벤투 기차역 옆, 창의적인 해산물 요리. 예약 극히 어려움.', note: '특급 맛집', price: '€€€' },
-                { id: 11, city: 'porto', type: 'food', name: 'Café Santiago', desc: '포르투 대표 음식 프란세지냐의 대명사. 항상 붐비는 곳.', note: '프란세지냐/필수', price: '€€' },
-                { id: 12, city: 'porto', type: 'food', name: 'Majestic Café', desc: '세계에서 가장 아름다운 카페 중 하나. 벨 에포크 시대 분위기.', note: '카페/분위기', price: '€€€' },
-                { id: 13, city: 'porto', type: 'stay', name: 'Pestana Vintage Porto', desc: '히베이라 강변의 환상적인 전망. 유네스코 유산 내 위치.', note: '5성급/전망', price: '€€€€€' },
-                { id: 14, city: 'porto', type: 'stay', name: 'Descobertas Boutique Hotel', desc: '히베이라 지구의 훌륭한 위치와 시설을 갖춘 부티크 호텔.', note: '4성급/부티크', price: '€€€' },
-                { id: 15, city: 'bilbao', type: 'food', name: 'Gure Toki', desc: '누에바 광장의 혁신적인 핀초 바. 창의적인 핀초가 일품.', note: '핀초/필수', price: '€€' },
-                { id: 16, city: 'bilbao', type: 'food', name: 'La Viña del Ensanche', desc: '1927년부터 이어진 전통 있는 레스토랑. 하몽과 와인이 유명.', note: '전통/하몽', price: '€€€' },
-                { id: 17, city: 'bilbao', type: 'stay', name: 'Gran Hotel Domine', desc: '구겐하임 미술관 맞은편, 최고의 전망을 자랑하는 5성급 호텔.', note: '5성급/전망', price: '€€€€€' },
-                { id: 18, city: 'bilbao', type: 'stay', name: 'Hotel Miró', desc: '구겐하임 근처의 세련된 디자인을 자랑하는 부티크 호텔.', note: '4성급/디자인', price: '€€€€' },
+                { id: 1, city: 'lisbon', type: 'food', name: 'Cervejaria Ramiro', desc: '해산물 본연의 맛을 즐길 수 있는 리스본 최고의 맛집. 예약 필수.', note: '특급 맛집', price: '€€€', rating: '4.5' },
+                { id: 2, city: 'lisbon', type: 'food', name: 'Solar dos Presuntos', desc: '현지인도 사랑하는 고급 해산물 레스토랑. 문어 요리 추천.', note: '고급/해산물', price: '€€€€', rating: '4.6' },
+                { id: 3, city: 'lisbon', type: 'food', name: 'Time Out Market Lisboa', desc: '유명 맛집들을 한곳에 모아놓은 푸드코트. 다양한 선택지.', note: '푸드코트/다양성', price: '€€', rating: '4.4' },
+                { id: 4, city: 'lisbon', type: 'food', name: 'A Ginjinha', desc: '체리주 진자(Ginja)를 작은 잔에 마시는 역사적인 가게.', note: '전통주 체험', price: '€', rating: '4.6' },
+                { id: 5, city: 'lisbon', type: 'food', name: 'Pastéis de Belém', desc: '설명이 필요 없는 원조 에그타르트. 벨렝 지구 방문 시 필수.', note: '디저트/필수', price: '€', rating: '4.6' },
+                { id: 6, city: 'lisbon', type: 'stay', name: 'Hotel da Baixa', desc: '바이샤 중심 최적의 위치. 현대적 시설과 훌륭한 조식.', note: '4성급/위치 최상', price: '€€€', rating: '4.7' },
+                { id: 7, city: 'lisbon', type: 'stay', name: 'Pousada de Lisboa', desc: '코메르시우 광장의 5성급 럭셔리 호텔. 특별한 경험.', note: '5성급/럭셔리', price: '€€€€€', rating: '4.6' },
+                { id: 8, city: 'aveiro', type: 'food', name: 'Maré Cheia', desc: '신선한 해산물 스튜(Caldeirada)가 일품인 현지 인기 식당.', note: '현지인 맛집', price: '€€', rating: '4.4' },
+                { id: 9, city: 'aveiro', type: 'stay', name: 'Hotel Moliceiro', desc: '중앙 운하 바로 앞에 위치한 로맨틱한 4성급 호텔. 주차 가능.', note: '4성급/전망', price: '€€€', rating: '4.6' },
+                { id: 10, city: 'porto', type: 'food', name: 'Tapabento', desc: '상 벤투 기차역 옆, 창의적인 해산물 요리. 예약 극히 어려움.', note: '특급 맛집', price: '€€€', rating: '4.7' },
+                { id: 11, city: 'porto', type: 'food', name: 'Café Santiago', desc: '포르투 대표 음식 프란세지냐의 대명사. 항상 붐비는 곳.', note: '프란세지냐/필수', price: '€€', rating: '4.3' },
+                { id: 12, city: 'porto', type: 'food', name: 'Majestic Café', desc: '세계에서 가장 아름다운 카페 중 하나. 벨 에포크 시대 분위기.', note: '카페/분위기', price: '€€€', rating: '4.1' },
+                { id: 13, city: 'porto', type: 'stay', name: 'Pestana Vintage Porto', desc: '히베이라 강변의 환상적인 전망. 유네스코 유산 내 위치.', note: '5성급/전망', price: '€€€€€', rating: '4.6' },
+                { id: 14, city: 'porto', type: 'stay', name: 'Descobertas Boutique Hotel', desc: '히베이라 지구의 훌륭한 위치와 시설을 갖춘 부티크 호텔.', note: '4성급/부티크', price: '€€€', rating: '4.6' },
+                { id: 15, city: 'bilbao', type: 'food', name: 'Gure Toki', desc: '누에바 광장의 혁신적인 핀초 바. 창의적인 핀초가 일품.', note: '핀초/필수', price: '€€', rating: '4.6' },
+                { id: 16, city: 'bilbao', type: 'food', name: 'La Viña del Ensanche', desc: '1927년부터 이어진 전통 있는 레스토랑. 하몽과 와인이 유명.', note: '전통/하몽', price: '€€€', rating: '4.5' },
+                { id: 17, city: 'bilbao', type: 'stay', name: 'Gran Hotel Domine', desc: '구겐하임 미술관 맞은편, 최고의 전망을 자랑하는 5성급 호텔.', note: '5성급/전망', price: '€€€€€', rating: '4.6' },
+                { id: 18, city: 'bilbao', type: 'stay', name: 'Hotel Miró', desc: '구겐하임 근처의 세련된 디자인을 자랑하는 부티크 호텔.', note: '4성급/디자인', price: '€€€€', rating: '4.7' },
             ],
             tips: [
                 {
@@ -341,7 +341,7 @@
                         loader.style.display = 'inline-block'; button.disabled = true;
                         const city = button.dataset.city;
                         const theme = button.dataset.theme;
-                        const prompt = `저는 59세 한국인 여행자입니다. 현재 ${city}에 있으며, 오늘의 여행 테마는 '${theme}'입니다. 이 테마에 맞춰, 여유롭고 문화적으로 깊이 있는 활동 2가지를 추천해주세요. 각 활동에 대한 간단한 설명과 왜 50대 여행자에게 적합한지 이유를 포함해주세요. 결과는 마크다운 형식을 사용하지 말고 일반 텍스트로 간결하게 보여주세요.`;
+                        const prompt = `You are a travel expert. A traveler is in ${city}, and their theme for the day is '${theme}'. Recommend 2 relaxing and culturally deep activities that fit this theme. For each activity, provide a brief description and why it's a good fit for the theme. Respond in Korean. Be direct and start the response with the first recommendation, without any introductory greetings. Your entire response must be plain text without any Markdown formatting.`;
                         const result = await getGeminiResponse(prompt);
                         outputDiv.innerHTML = formatAIResponse(result);
                         outputDiv.style.display = 'block';
@@ -432,7 +432,10 @@
                             </div>
                             <p class="text-stone-600 mt-2 text-sm">${item.desc}</p>
                         </div>
-                        <p class="text-right font-bold mt-2 text-lg ${textColor}">${item.price}</p>
+                        <div class="flex justify-between items-center mt-3">
+                           <span class="text-sm font-bold text-amber-600">⭐ ${item.rating}</span>
+                           <p class="text-right font-bold text-lg ${textColor}">${item.price}</p>
+                        </div>
                     `;
                     recommendContainer.appendChild(card);
                 });
@@ -451,7 +454,7 @@
                         outputDiv.style.display = 'block'; return;
                     }
                     loader.style.display = 'inline-block'; button.disabled = true;
-                    const prompt = `You are an expert local guide for a 59-year-old Korean traveler in Portugal or Northern Spain. The traveler is looking for a place to eat or stay. First, determine if the query is about food/restaurants or accommodation/hotels. Based on that, recommend a minimum of 4 to a maximum of 6 specific, real places. For each recommendation, provide the place's name, its approximate rating (e.g., 4.5/5), a brief appealing description, and a valid Google Maps search link for that place. The traveler's search query is: '${preference}'. Respond in Korean. Crucially, your entire response must be plain text without any Markdown formatting (do not use *, #, **, etc.).`;
+                    const prompt = `You are an expert local guide for a traveler in Portugal or Northern Spain. The traveler is looking for a place to eat or stay. First, determine if the query is about food/restaurants or accommodation/hotels. Based on that, recommend a minimum of 4 to a maximum of 6 specific, real places. For each recommendation, provide the place's name, its approximate rating (e.g., 4.5/5), a brief appealing description, and a valid Google Maps search link for that place. The traveler's search query is: '${preference}'. Respond in Korean. IMPORTANT: Be direct and get straight to the point. Do not include any introductory greetings or pleasantries. Your response should start directly with the first recommendation. Crucially, your entire response must be plain text without any Markdown formatting.`;
                     const result = await getGeminiResponse(prompt);
                     outputDiv.innerHTML = formatAIResponse(result);
                     outputDiv.style.display = 'block';
